@@ -6,4 +6,8 @@ Standardized the naming conventions for security variables throughout zssp.
 
 Implemented a safer version of write_all for zssp to use. This has 3 benefits: it completely prevents unknown io errors, making error handling easier and self-documenting; it completely prevents src from being truncated in dest, putting in an extra barrier to prevent catastrophic key truncation; and it has slightly less performance overhead than a write_all.
 
-Fixed a possible buffer overrun panic when decoding alice_ratchet_key_fingerprint
+Implemented a safer version of read_exact for zssp to use. This has similar benefits to the previous change.
+
+Refactored most buffer logic to use safe_read_exact and safe_write_all, the resulting code is less verbose and easier to analyze and verify. Because of this refactor the buffer overrun below was caught.
+
+Fixed a buffer overrun panic when decoding alice_ratchet_key_fingerprint
